criação do diretório de assets, inclusão dos cartões no corpo do template principal.

--- a/templates/model-header.html
+++ b/templates/model-header.html
@@ -1,12 +1,12 @@
+{% load static %}
 <header>
     <!-- Fixed navbar -->
     <nav class="navbar navbar-expand-md navbar-light fixed-top" style="background-color: #7cc876;">
         <div class="container-fluid">
 
             <a class="navbar-brand" href="#">
-                <img src="./assets/brand.png" alt="" width="48" height="48">
+                <img src="{% static 'img/brand.png' %}" alt="Varejo Digital" width="48" height="48">Varejo Digital
             </a>
-<!--            <a class="navbar-brand" href="#">Navbar</a>-->
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
