--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,30 @@
 {% extends "model-page.html" %}
+{% load static %}
 
 {% block content %}
     <!-- Begin page content -->
     <main class="flex-shrink-0">
-        <div class="container">
-            <h1 class="mt-5">Sticky footer with fixed navbar</h1>
-            <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added with <code class="small">padding-top: 60px;</code> on the <code class="small">main &gt; .container</code>.</p>
-            <p>Back to <a href="../examples/sticky-footer/">the default sticky footer</a> minus the navbar.</p>
+        <div class="container mt-4">
+
+            <!-- Teste com cards -->
+            <div class="row justify-content-md-center">
+
+                {% for i in "123456789" %}
+                    <!-- Card 1 -->
+                    <div class="col-sm-3">
+                        <div class="card text-dark bg-light mt-4">
+                            <img src="{% static 'img/brand.png' %}" class="card-img-top" alt="Descição da imagem.">
+
+                            <div class="card-body">
+                                <h5 class="card-title">Título do Cartão {{ i }}</h5>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis sed optio quam rerum recusandae. Eum officiis enim veritatis aut sunt, vero quo sequi dolores maiores, sint assumenda laboriosam, reiciendis voluptas.</p>
+                                <a href="#" class="btn btn-primary">Botão Link</a>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+
+            </div>
         </div>
     </main>
 {% endblock %}
