--- a/templates/model-page.html
+++ b/templates/model-page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt" class="h-100">
+<html lang="pt-br" class="h-100">
     <head>
         <!-- Required meta tags -->
         <meta charset="UTF-8">
